<resources>
    <string name="app_name">YourPuppyDiary</string>
    <string name="app_name_japan">ペット日記</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_tap">MainTapActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main_top">MainTopActivity</string>
    <string name="title_home">ホーム</string>
    <string name="title_dashboard">キャレンダー</string>
    <string name="title_notifications">アラム</string>
    <string name="my_puppy_diary">Your Puppy Diary</string>
    <string name="copy_right_songsugeun_nall_right_reserved">App Copy Right: Mingshun\nImage Copy Right: irasutoya.com</string>
    <string name="splashContent">私の大切なペットの\n育成日記ダイアリー</string>

    <string name="setting_time">%1$d時%2$d分にアラム設定されました。</string>
    <string name="setting_cancel">アラムをキャンセルしました。</string>

    <string name="receive_alarm_title">アラム終了</string>
    <string name="receive_alarm_content">指定したアラムが時間です。</string>
    <string name="today_schedule">今日のスケジュール</string>
    <string name="notification_time_setting">設定</string>
    <string name="cancel">キャンセル</string>
    <string name="ok">OK</string>

    <!--  calendar_memo  -->
    <string name="calendar_memo_title">Title</string>
    <string name="calendar_memo_content">Content</string>
    <string name="calendar_memo_save">SAVE</string>
    <string name="calendar_memo_cancel">CANCEL</string>
    <string name="today_user_schedule_title">日程はどうなりますか。</string>
    <string name="today_user_schedule_date">選択した日は%d年%d月%d日です。</string>
    <string name="daily_my_dog_memory">可愛い子犬の日記</string>
    <string name="save_image">SAVE</string>
    <string name="remove_image_confrim_title">画像削除</string>
    <string name="remove_image_confirm_message">画像を削除しますか。</string>
    <string name="play_with_puppy">設定した時間まで子犬と遊んでください。</string>
    <string name="need_to_title">必須項目</string>
    <string name="need_to_content">タイトルと内容を記入してください。</string>
</resources>
