<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.puppy_diary.your_puppy_diary.main.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/home_frag" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.puppy_diary.your_puppy_diary.main.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/dashboard_frag" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.puppy_diary.your_puppy_diary.main.ui.notifications.NotificationsFragmentImpl"
        android:label="@string/title_notifications"
        tools:layout="@layout/notifications_frag" />
</navigation>
